--- a/.github/workflows/tiiuae-sitl.yaml
+++ b/.github/workflows/tiiuae-sitl.yaml
@@ -2,7 +2,7 @@ name: tii-px4-sitl
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
 
 jobs:
@@ -16,15 +16,15 @@ jobs:
     steps:
 
       - name: Checkout px4-firmware
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: px4-firmware
           fetch-depth: 0
 
-      - uses: docker/setup-buildx-action@v1
+      - uses: docker/setup-buildx-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         with:
           driver-opts: network=host
 
@@ -40,7 +40,7 @@ jobs:
 
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: ghcr.io/tiiuae/tii-px4-sitl
           tags: |
@@ -51,14 +51,14 @@ jobs:
             type=raw,value=latest
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build tii-px4-sitl image and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: ./px4-firmware/packaging/Dockerfile.sitl
@@ -67,10 +67,10 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - uses: jfrog/setup-jfrog-cli@v2
+      - uses: jfrog/setup-jfrog-cli@v3
         if: github.event_name == 'push'
         env:
-          JF_ARTIFACTORY_1: ${{ secrets.ARTIFACTORY_TOKEN }}
+          JF_ENV_1: ${{ secrets.ARTIFACTORY_TOKEN }}
 
       - name: Upload to Artifactory (px4-sitl)
         env:
