[RFC] broadcast parameter changes and ModuleParams skip full updateParams() when possible

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -134,6 +134,7 @@ set(msg_files
 	OrbTest.msg
 	OrbTestLarge.msg
 	OrbTestMedium.msg
+	Parameter.msg
 	ParameterUpdate.msg
 	Ping.msg
 	PositionControllerLandingStatus.msg
