Adds vehicle_imu_status data to microdds_client
Signed-off-by: crux <cruxdevy@gmail.com>

--- a/src/modules/microdds_client/dds_topics.yaml
+++ b/src/modules/microdds_client/dds_topics.yaml
@@ -44,6 +44,9 @@ publications:
   - topic: /fmu/out/vehicle_trajectory_waypoint_desired
     type: px4_msgs::msg::VehicleTrajectoryWaypoint
 
+  - topic: /fmu/out/vehicle_imu_status
+    type: px4_msgs::msg::VehicleImuStatus
+
 subscriptions:
 
   - topic: /fmu/in/offboard_control_mode
