--- a/ROMFS/CMakeLists.txt
+++ b/ROMFS/CMakeLists.txt
@@ -176,6 +176,7 @@ list(APPEND OPTIONAL_BOARD_RC
 	rc.board_sensors
 	rc.board_extras
 	rc.board_mavlink
+	rc.board_param
 )
 
 foreach(board_rc_file ${OPTIONAL_BOARD_RC})
