UWB driver rework that uses 2 UWB MKBoards - 1 as Controller (Initiator), one as Controllee (Anchor)
uwb_sr150: template for new UWB driver with modifications

uwb_sr150: included pr_nxp_uwb_driver & add. to new driver

uwb_sr150: updated files to make UWB demo functional. Added actuator_controls_3 again

uwb_sr150: Navigation elements localization and precision navigation removed from UWB driver to LandingTargetEstimator.

rc.sensor: Added uwb to rc.sensor list for auto-start
uwb_sr150driver: Deleted experimental uwb files
uwb_sr150: Removed parameters from uwb module.yaml

uwb_sr150: Cleaned up the code
uwb_sr150: Removed the navigation functions to LandingTargetEstimator

LTE: translated landing_target_estimator_params.c into module.yaml
LTE: added UWB params from uwb_sr150 module.yaml

UwbDistance.msg-> SensorUwb.msg: renamed UwbDistance.msg to SensorUwb.msg
SensorUwb.msg: renamed everything to correspond with the renaming of the message

uwb_sr150: Added orientation param, but need to check with Loic.
uwb_sr150: Removed gps & pos struct.

uwb_sr150: Cleaned up driver of unnecessary code.
uwb_sr150: Edited UWB board orientation param.

uwb_sr150: Readded position.
uwb_sr150: Added orientation param to module.yaml

uwb_sr150: Started making changes to UWB driver to be work queue task

uwb_sr150: Added getter for orientation param

uwb_sr150: Restructured header file to match workqueue example
uwb_sr150: Reworked to work with workqueue and remove unnecessary items

uwb_sr150: Revert "Added getter for orientation param". This reverts commit a4ccdf44c999b4836eea2fa9142631f1758bf1d8.

uwb_sr150: Revert "updated files to make UWB demo functional. Added actuator_controls_3 again". This reverts commit a7db41f28e42d03ede74dcd5fc79dde0a95ede59.

Removed Yaw and Pitch related items. TBD with Daniel

uwb_sr150: Updated copyright years & readded *buffer pointer to collectData()

rc.sensor: UWB added to wq, so not needed

Added UWB SR150 to board config

uwb_sr150: Removed no

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -169,6 +169,7 @@ set(msg_files
 	SensorSelection.msg
 	SensorsStatus.msg
 	SensorsStatusImu.msg
+	SensorUwb.msg
 	SystemPower.msg
 	TakeoffStatus.msg
 	TaskStackInfo.msg
@@ -184,7 +185,6 @@ set(msg_files
 	UavcanParameterValue.msg
 	UlogStream.msg
 	UlogStreamAck.msg
-	UwbDistance.msg
 	UwbGrid.msg
 	VehicleAcceleration.msg
 	VehicleAirData.msg
