Dp rate controller port (#26)
* Ported rate controller modifications and Drag Estimator from v1.12.1_dev

* Added v1.12 mods to VehicleAngularVelocity.cpp to now publish according to imu_integ_rate

* Ran make format, this modified precision landing files.

* Enabled DragEstimator and disabled unused modules in Kconfig

* Added Drag_estimator to sitl default modules

* Disabled unused modules from fmu-v5 to pass checks

* Revert "Disabled unused modules from fmu-v5 to pass checks"

This reverts commit dce4a51b8eec6f0c1201d1110d0d23b1651e70f1.

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -64,6 +64,7 @@ set(msg_files
 	cpuload.msg
 	differential_pressure.msg
 	distance_sensor.msg
+	drag_estimator.msg
 	ekf2_timestamps.msg
 	estimator_gps_status.msg
 	esc_report.msg
@@ -133,6 +134,7 @@ set(msg_files
 	px4io_status.msg
 	radio_status.msg
 	rate_ctrl_status.msg
+	rate_ctrl_status_detail.msg
 	rc_channels.msg
 	rc_parameter_map.msg
 	rpm.msg
