Ported a fix from official PX4 to fix mavlink console (#28)
* Ported a fix from official PX4 to fix mavlink console

* Testing disabling workflow tests

* Fixing indentation... maybe?

* Disabling multiple workflow tests

* Editting formatting

* Editting formatting again

* Formatting again

* Test replacing exclude with if condition

* Test replacing exclude with if condition again

* Fix missing parenthesis

* Add skip sub-jobs

* Adding to other subjobs

* Adding more

* Alternative approach to disabling tests

* Reverting to initial test disabling method with "exclude: "

Co-authored-by: wsolichin-sees <wsolichin@sees.ai>

--- a/.github/workflows/compile_nuttx.yml
+++ b/.github/workflows/compile_nuttx.yml
@@ -68,6 +68,10 @@ jobs:
           spracing_h7extreme,
           uvify_core
           ]
+        exclude:
+        - config: cuav_x7pro
+        - config: holybro_kakutef7
+        - config: px4_fmu-v5
     steps:
     - uses: actions/checkout@v1
       with:
