Some add-on on matrix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,5 +135,10 @@
         "workbench.settings.enableNaturalLanguageSearch": false,
         "yaml.schemas": {
                 "${workspaceFolder}/validation/module_schema.yaml": "${workspaceFolder}/src/modules/*/module.yaml"
-        }
+        },
+        "ros.distro": "melodic",
+        "python.autoComplete.extraPaths": [
+                "/home/aksanyal/catkin_ws/devel/lib/python2.7/dist-packages",
+                "/opt/ros/melodic/lib/python2.7/dist-packages"
+        ]
 }
