modified for autostart of UWB driver currently builds, but doesn't publish any uwb_distance messages

--- a/src/drivers/uwb/uwb_sr150/module.yaml
+++ b/src/drivers/uwb/uwb_sr150/module.yaml
@@ -9,6 +9,15 @@ serial_config:
 parameters:
     - group: UWB
       definitions:
+        UWB_DRIVER_EN:
+          description:
+            short: UWB Enable Autostart
+            long: Set this param to enable/disable the automatic starting of the UWB driver
+          type: enum
+          values:
+            0: disabled
+            1: enabled
+          default: 1
 
         UWB_INIT_OFF_X:
           description:
