--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -135,6 +135,14 @@ set(msg_files
 	OrbTest.msg
 	OrbTestLarge.msg
 	OrbTestMedium.msg
+	ParameterClientResetRequest.msg
+	ParameterClientResetResponse.msg
+	ParameterClientSetValueRequest.msg
+	ParameterClientSetValueResponse.msg
+	ParameterServerSetUsedResponse.msg
+	ParameterServerSetUsedRequest.msg
+	ParameterServerSetValueRequest.msg
+	ParameterServerSetValueResponse.msg
 	ParameterUpdate.msg
 	Ping.msg
 	PositionControllerLandingStatus.msg
