[RTL] Add VTOL land approach for home with designated loiter points in the RTL mode.

--- a/src/modules/navigator/CMakeLists.txt
+++ b/src/modules/navigator/CMakeLists.txt
@@ -51,6 +51,7 @@ px4_add_module(
 		precland.cpp
 		mission_feasibility_checker.cpp
 		geofence.cpp
+		vtol_land.cpp
 		vtol_takeoff.cpp
 	DEPENDS
 		geo
