--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -3,10 +3,10 @@ name: Python CI Checks
 on:
   push:
     branches:
-    - 'master'
+    - 'aviant/1.13'
   pull_request:
     branches:
-    - '*'
+    - '**'
 
 jobs:
   build:
