--- a/.github/workflows/compile_nuttx.yml
+++ b/.github/workflows/compile_nuttx.yml
@@ -3,10 +3,12 @@ name: Nuttx Targets
 on:
   push:
     branches:
-    - 'master'
+      - 'aviant/1.13'
+    tags:
+      - 'v*'
   pull_request:
     branches:
-    - '*'
+    - '**'
 
 jobs:
   build:
@@ -16,57 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         config: [
-          airmind_mindpx-v2,
-          ark_can-flow,
-          ark_can-gps,
-          ark_can-rtk-gps,
-          ark_cannode,
-          ark_fmu-v6x,
-          atl_mantis-edu,
-          av_x-v1,
-          bitcraze_crazyflie,
-          bitcraze_crazyflie21,
-          cuav_can-gps-v1,
-          cuav_nora,
-          cuav_x7pro,
           cubepilot_cubeorange,
-          cubepilot_cubeyellow,
-          diatone_mamba-f405-mk2,
-          freefly_can-rtk-gps,
-          holybro_can-gps-v1,
-          holybro_durandal-v1,
-          holybro_kakutef7,
-          holybro_kakuteh7,
-          holybro_pix32v5,
-          matek_h743-slim,
-          matek_gnss-m9n-f4,
-          modalai_fc-v1,
-          modalai_fc-v2,
-          mro_ctrl-zero-f7,
-          mro_ctrl-zero-f7-oem,
-          mro_ctrl-zero-h7,
-          mro_ctrl-zero-h7-oem,
-          mro_pixracerpro,
-          mro_x21,
-          mro_x21-777,
-          nxp_fmuk66-e,
-          nxp_fmuk66-v3,
-          nxp_fmurt1062-v1,
-          nxp_ucans32k146,
-          omnibus_f4sd,
-          raspberrypi_pico,
-          px4_fmu-v2,
-          px4_fmu-v3,
-          px4_fmu-v4,
-          px4_fmu-v4pro,
-          px4_fmu-v5,
-          px4_fmu-v5x,
-          px4_fmu-v6c,
-          px4_fmu-v6u,
-          px4_fmu-v6x,
-          sky-drones_smartap-airlink,
-          spracing_h7extreme,
-          uvify_core
           ]
     steps:
     - uses: actions/checkout@v1
@@ -121,5 +73,13 @@ jobs:
       with:
         name: px4_package_${{matrix.config}}
         path: |
-          build/**/*.px4
-          build/**/*.bin
+          build/cubepilot_cubeorange_default/*.px4
+          build/cubepilot_cubeorange_default/*.bin
+
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          build/cubepilot_cubeorange_default/*.px4
+          build/cubepilot_cubeorange_default/*.bin
