--- a/.gitmodules
+++ b/.gitmodules
@@ -12,8 +12,8 @@
 	branch = main
 [submodule "Tools/simulation/gazebo-classic/sitl_gazebo-classic"]
 	path = Tools/simulation/gazebo-classic/sitl_gazebo-classic
-	url = https://github.com/PX4/PX4-SITL_gazebo-classic.git
-	branch = main
+	url = https://github.com/Reifly-io/PX4-SITL_gazebo-classic.git
+	branch = simulation/add-qos-policy-for-camera
 [submodule "src/drivers/gps/devices"]
 	path = src/drivers/gps/devices
 	url = https://github.com/PX4/PX4-GPSDrivers.git
