--- a/src/drivers/actuators/modalai_esc/module.yaml
+++ b/src/drivers/actuators/modalai_esc/module.yaml
@@ -11,13 +11,13 @@ actuator_output:
       label: 'RPM Min'
     - param: 'UART_ESC_RPM_MAX'
       label: 'RPM Max'
-    - param: 'UART_ESC_REV1'
+    - param: 'UART_ESC_SDIR1'
       label: 'ESC 1 Spin Direction'
-    - param: 'UART_ESC_REV2'
+    - param: 'UART_ESC_SDIR2'
       label: 'ESC 2 Spin Direction'
-    - param: 'UART_ESC_REV3'
+    - param: 'UART_ESC_SDIR3'
       label: 'ESC 3 Spin Direction'
-    - param: 'UART_ESC_REV4'
+    - param: 'UART_ESC_SDIR4'
       label: 'ESC 4 Spin Direction'
   output_groups:
     - param_prefix: UART_ESC
