--- a/boards/modalai/voxl2-slpi/src/drivers/tbs_crossfire/CMakeLists.txt
+++ b/boards/modalai/voxl2-slpi/src/drivers/tbs_crossfire/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2022 ModalAI, Inc. All rights reserved.
+#   Copyright (c) 2022 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -31,20 +31,19 @@
 #
 ############################################################################
 
-# Need to make sure that the DSP processor on VOXL2
-# knows about all parameters since some modules need parameters
-# from other modules that are not running on the DSP.
-set(DISABLE_PARAMS_MODULE_SCOPING TRUE PARENT_SCOPE)
-
-add_library(drivers_board
-	board_config.h
-	i2c.cpp
-	init.c
-	spi.cpp
-    )
-
-# Add custom drivers for SLPI
-add_subdirectory(${PX4_BOARD_DIR}/src/drivers/icm42688p)
-add_subdirectory(${PX4_BOARD_DIR}/src/drivers/rc_controller)
-add_subdirectory(${PX4_BOARD_DIR}/src/drivers/mavlink_rc_in)
-add_subdirectory(${PX4_BOARD_DIR}/src/drivers/tbs_crossfire)
+px4_add_module(
+	MODULE drivers__modalai__tbs_crossfire
+	MAIN tbs_crossfire
+	COMPILE_FLAGS
+		-Wno-cast-align # TODO: fix and enable
+		-Wno-address-of-packed-member # TODO: fix in c_library_v2
+	INCLUDES
+		${PX4_SOURCE_DIR}/build/modalai_voxl2_default/mavlink/common
+		${PX4_SOURCE_DIR}/src/drivers/rc_input
+	SRCS
+		tbs_crossfire.cpp
+		${PX4_SOURCE_DIR}/src/drivers/rc_input/crsf_telemetry.cpp
+	DEPENDS
+		rc
+		px4_work_queue
+	)
