--- a/src/modules/microdds_client/dds_topics.yaml
+++ b/src/modules/microdds_client/dds_topics.yaml
@@ -6,81 +6,81 @@
 publications:
 
   - topic: /fmu/out/collision_constraints
-    type: px4_msgs::msg::CollisionConstraints
+    type: px4::msg::CollisionConstraints
 
   - topic: /fmu/out/failsafe_flags
-    type: px4_msgs::msg::FailsafeFlags
+    type: px4::msg::FailsafeFlags
 
   - topic: /fmu/out/sensor_combined
-    type: px4_msgs::msg::SensorCombined
+    type: px4::msg::SensorCombined
 
   - topic: /fmu/out/timesync_status
-    type: px4_msgs::msg::TimesyncStatus
+    type: px4::msg::TimesyncStatus
 
   # - topic: /fmu/out/vehicle_angular_velocity
-  #   type: px4_msgs::msg::VehicleAngularVelocity
+  #   type: px4::msg::VehicleAngularVelocity
 
   - topic: /fmu/out/vehicle_attitude
-    type: px4_msgs::msg::VehicleAttitude
+    type: px4::msg::VehicleAttitude
 
   - topic: /fmu/out/vehicle_control_mode
-    type: px4_msgs::msg::VehicleControlMode
+    type: px4::msg::VehicleControlMode
 
   - topic: /fmu/out/vehicle_global_position
-    type: px4_msgs::msg::VehicleGlobalPosition
+    type: px4::msg::VehicleGlobalPosition
 
   - topic: /fmu/out/vehicle_gps_position
-    type: px4_msgs::msg::SensorGps
+    type: px4::msg::SensorGps
 
   - topic: /fmu/out/vehicle_local_position
-    type: px4_msgs::msg::VehicleLocalPosition
+    type: px4::msg::VehicleLocalPosition
 
   - topic: /fmu/out/vehicle_odometry
-    type: px4_msgs::msg::VehicleOdometry
+    type: px4::msg::VehicleOdometry
 
   - topic: /fmu/out/vehicle_status
-    type: px4_msgs::msg::VehicleStatus
+    type: px4::msg::VehicleStatus
 
   - topic: /fmu/out/vehicle_trajectory_waypoint_desired
-    type: px4_msgs::msg::VehicleTrajectoryWaypoint
+    type: px4::msg::VehicleTrajectoryWaypoint
 
 subscriptions:
 
   - topic: /fmu/in/offboard_control_mode
-    type: px4_msgs::msg::OffboardControlMode
+    type: px4::msg::OffboardControlMode
 
   - topic: /fmu/in/onboard_computer_status
-    type: px4_msgs::msg::OnboardComputerStatus
+    type: px4::msg::OnboardComputerStatus
 
   - topic: /fmu/in/obstacle_distance
-    type: px4_msgs::msg::ObstacleDistance
+    type: px4::msg::ObstacleDistance
 
   - topic: /fmu/in/sensor_optical_flow
-    type: px4_msgs::msg::SensorOpticalFlow
+    type: px4::msg::SensorOpticalFlow
 
   - topic: /fmu/in/telemetry_status
-    type: px4_msgs::msg::TelemetryStatus
+    type: px4::msg::TelemetryStatus
 
   - topic: /fmu/in/trajectory_setpoint
-    type: px4_msgs::msg::TrajectorySetpoint
+    type: px4::msg::TrajectorySetpoint
 
   - topic: /fmu/in/vehicle_attitude_setpoint
-    type: px4_msgs::msg::VehicleAttitudeSetpoint
+    type: px4::msg::VehicleAttitudeSetpoint
 
   - topic: /fmu/in/vehicle_mocap_odometry
-    type: px4_msgs::msg::VehicleOdometry
+    type: px4::msg::VehicleOdometry
 
   - topic: /fmu/in/vehicle_rates_setpoint
-    type: px4_msgs::msg::VehicleRatesSetpoint
+    type: px4::msg::VehicleRatesSetpoint
 
   - topic: /fmu/in/vehicle_visual_odometry
-    type: px4_msgs::msg::VehicleOdometry
+    type: px4::msg::VehicleOdometry
 
   - topic: /fmu/in/vehicle_command
-    type: px4_msgs::msg::VehicleCommand
+    type: px4::msg::VehicleCommand
 
   - topic: /fmu/in/vehicle_trajectory_bezier
-    type: px4_msgs::msg::VehicleTrajectoryBezier
+    type: px4::msg::VehicleTrajectoryBezier
 
   - topic: /fmu/in/vehicle_trajectory_waypoint
-    type: px4_msgs::msg::VehicleTrajectoryWaypoint
+    type: px4::msg::VehicleTrajectoryWaypoint
