GZ airspeed and model updates.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

Co-authored-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/Tools/simulation/gz/models/rascal_110/model.config
+++ b/Tools/simulation/gz/models/rascal_110/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <model>
-  <name>Plane</name>
+  <name>rascal_110</name>
   <version>1.0</version>
   <sdf version='1.9'>model.sdf</sdf>
 
@@ -10,6 +10,6 @@
   </author>
 
   <description>
-    This is a model of a standard plane.
+    This is a model of a Rascal 110.
   </description>
 </model>
