--- a/Tools/simulation/gz/models/rc_cessna/model.config
+++ b/Tools/simulation/gz/models/rc_cessna/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <model>
-  <name>rascal_110</name>
+  <name>rc_cessna</name>
   <version>1.0</version>
   <sdf version='1.9'>model.sdf</sdf>
 
@@ -10,6 +10,6 @@
   </author>
 
   <description>
-    This is a model of a Rascal 110.
+    This is a model of an RC Cessna 182.
   </description>
 </model>
