Dp gps submodule port (#31)
* Removed PX4 GPS driver submodule

* Added sees.ai GPS driver submodule

* Increasing GPS logging rate, adding debug message for GPS sensor timeout.

* Changing submodule url to http

* Fix for mavlink issues in gtest build

* Ran make format to fix test failure

Co-authored-by: Richard Hopkirk <rhopkitk@sees.ai>

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,10 +14,6 @@
 	path = Tools/sitl_gazebo
 	url = https://github.com/PX4/PX4-SITL_gazebo.git
 	branch = master
-[submodule "src/drivers/gps/devices"]
-	path = src/drivers/gps/devices
-	url = https://github.com/PX4/PX4-GPSDrivers.git
-	branch = master
 [submodule "src/modules/micrortps_bridge/micro-CDR"]
 	path = src/modules/micrortps_bridge/micro-CDR
 	url = https://github.com/PX4/Micro-CDR.git
@@ -67,3 +63,7 @@
 [submodule "src/modules/microdds_client/Micro-XRCE-DDS-Client"]
 	path = src/modules/microdds_client/Micro-XRCE-DDS-Client
 	url = https://github.com/eProsima/Micro-XRCE-DDS-Client.git
+[submodule "devices"]
+	path = src/drivers/gps/devices
+	url = https://github.com/SEESAI/PX4-GPSDrivers.git
+	branch = 6534b05_dev
