Dp magnetometer port (#33)
* Porting Magnetometer low pass modifications previously made in v1.12.1_dev

* Ran make format

* Disabled RGB driver support for px4_fmu-v2_multicopter to pass build test (we use cubepilot_cubeorange)

* Disabled CI test for unused flight controller (was failing)

--- a/.github/workflows/compile_nuttx.yml
+++ b/.github/workflows/compile_nuttx.yml
@@ -72,6 +72,7 @@ jobs:
         - config: cuav_x7pro
         - config: holybro_kakutef7
         - config: px4_fmu-v5
+        - config: omnibus_f4sd
     steps:
     - uses: actions/checkout@v1
       with:
