--- a/.github/workflows/compile_nuttx.yml
+++ b/.github/workflows/compile_nuttx.yml
@@ -48,8 +48,8 @@ jobs:
           ccache -s
           ccache -z
 
-    - name: make all_variants_${{matrix.config}}
-      run: make all_variants_${{matrix.config}}
+    - name: make ${{matrix.config}}
+      run: make ${{matrix.config}}_default
       timeout-minutes: 45
     - name: make ${{matrix.config}} bloaty_compileunits
       run: make ${{matrix.config}} bloaty_compileunits || true
